unpackaged/main/default/objects/PolicyRules__c/PolicyRules__c.object-meta.xml
<CustomObject>
    <label>Policy Rule</label>
    <nameField>
        <label>Policy Rules Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>