unpackaged/main/default/objects/PolicyRules__c/fields/DecisionCategory__c.field-meta.xml
<CustomField>
    <fullName>DecisionCategory__c</fullName>
    <label>Decision Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>