unpackaged/main/default/objects/PolicyRules__c/fields/DecisionText__c.field-meta.xml
<CustomField>
    <fullName>DecisionText__c</fullName>
    <label>Decision Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>