unpackaged/main/default/objects/PolicyRules__c/fields/ReasonCode__c.field-meta.xml
<CustomField>
    <fullName>ReasonCode__c</fullName>
    <label>Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>