unpackaged/main/default/objects/PolicyRules__c/fields/ReasonCodeDescription__c.field-meta.xml
<CustomField>
    <fullName>ReasonCodeDescription__c</fullName>
    <label>Reason Code Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>